cabal-version:      2.4
name:               test-smart-chain
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: This project is a test to use API calls with Haskell.

-- A longer description of the package.
description: The goal of this project is to print the top 30 stories from Hacker News and display the top 10 commenter names of these stories with the total number of comments that they posted (only for these 30 stories)

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arthur Guillon
maintainer:         arthurguillon@hotmail.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

executable test-smart-chain
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:HackerNews


    build-depends:    base ^>=4.15.0.0
                      ,  aeson
                      , http-conduit
                      , bytestring
                      , text
                      , wreq
                      , lens
                      , containers
                      , lens-aeson
                      , async
    other-extensions:       OverloadedStrings
    hs-source-dirs:   app
    default-language: Haskell2010
